# Bibliotheque_de_Contacts

./: .gitignore  Bibliotheque_de_Contacts_fr_BF.ts  CMakeLists.txt  README.md  contact.cpp  contact.h  contactmanager.cpp  contactmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  contacts.txt  qtcsettings.cmake
build-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-40798d64fc8e76a182d0.json  cmakeFiles-v1-f46057038390b8933f14.json  codemodel-v2-e83e6c8f0c060c1fec42.json  directory-.-Debug-f469c3395651d0c7f4a4.json  index-2024-11-24T22-13-17-0080.json  target-Bibliotheque_de_Contacts-Debug-09218b3c7da6f41de9b1.json  target-Bibliotheque_de_Contacts_autogen-Debug-8474f196473a6108c927.json  target-Bibliotheque_de_Contacts_autogen_timestamp_deps-Debug-3ce79d5f0d2add44fac3.json
build-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/Bibliotheque_de_Contacts_autogen/: deps
build-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/Bibliotheque_de_Contacts_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
